--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Lovestar Race Club & Bicycle Bags
 short_title: Lovestar
 email:
-description: Cyclocross racing, gravel grinding and coffee drinking (all while using custom bicycle bags)
+description: Cyclocross racing, gravel grinding and coffee (and beer) drinking, all while rocking some sweet custom bicycle bags
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
 
